Removing log4j, implementing data restoration